# add-logo-processor-rust

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
designs/: image_and_video_flow_chart.mmd
designs/backend/: media_classes.mmd
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs  lib.rs  main.rs
src-tauri/src/codecs/: codec.rs  mod.rs  video_codec_types.rs
src-tauri/src/commands/: commands.rs
src-tauri/src/formats/: format.rs  image_format_types.rs  mod.rs  video_format_types.rs
src-tauri/src/handlers/: image_handler.rs  logo_handler.rs  mod.rs  process_handler.rs  progress_handler.rs  terminal_progress.rs  video_handler.rs
src-tauri/src/image/: image_formats.rs  image_handler.rs  image_struct.rs  image_validator.rs  mod.rs
src-tauri/src/media/: image.rs  logo.rs  media.rs  mod.rs  types.rs  video.rs
src-tauri/src/processors/: ffmpeg_processor.rs  image_processor.rs  logo_processor.rs  mod.rs  video_processor.rs
src-tauri/src/shared/: commands.rs  config.rs  ffmpeg_logger.rs  ffmpeg_processor.rs  ffmpeg_structs.rs  file_utils.rs  logo_handler.rs  logo_processor.rs  logo_structs.rs  media_structs.rs  media_validator.rs  mod.rs  process_manager.rs  progress_handler.rs  progress_terminal_bar.rs
src-tauri/src/src/types/: Corner.ts  ImageSettings.ts  VideoSettings.ts
src-tauri/src/utils/: config.rs  file_utils.rs  mod.rs
src-tauri/src/video/: mod.rs  video.rs  video_codecs.rs  video_formats.rs  video_handler.rs  video_processor.rs  video_structs.rs  video_validator.rs
src/components/image-components/: ImageProcessingOptionsCard.tsx
src/components/layout/: AppLayout.tsx
src/components/shared/: DirectorySelectionCard.tsx  LogoConfiguratorCard.tsx  ProgressBar.tsx
src/components/ui/: button.tsx  card.tsx  form.tsx  input.tsx  path-input.tsx  progress.tsx  radio-group.tsx  select-favorite.tsx  select.tsx  slider.tsx  switch.tsx
src/components/video-components/: VideoProcessingOptionsCard.tsx
src/contexts/: SettingsContext.tsx
src/pages/image/: index.tsx
src/pages/settings/: index.tsx
src/pages/video/: index.tsx
src/schema/: imageForm.tsx  videoForm.tsx
src/types/: AppConfig.ts  ImageSettings.ts  ProgressInfo.ts  VideoSettings.ts
