[package]
    authors    = ["0DarkPhoenix"]
    description="Image and video processor for resizing media, changing file types and adding a logo"
    edition    ="2021"
    name       ="add-logo-processor"
    version    ="0.0.1"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    # The `_lib` suffix may seem redundant but it is necessary
    # to make the lib name unique and wouldn't conflict with the bin name.
    # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
    crate-type= ["cdylib", "rlib", "staticlib"]
    name      ="add_logo_processor_lib"

[build-dependencies]
    tauri-build= {version="2.4.1", features= [] }
    ts-rs      ="11.0"

[profile.release]
    debug    =1
    lto      =true
    opt-level="s"

[dependencies]
    ffmpeg-sidecar     ="2.2.0"
    imagesize          ="0.14.0"
jwalk = "0.8.1"
    lazy_static        ="1.5.0"
    log                ="0.4.28"
    num_cpus           ="1.17"
    rayon              ="1.11"
    remove_dir_all     ="1.0.0"
    serde              = {version="1.0.228", features= ["derive"] }
    serde_json         ="1.0.145"
    tauri              = {version="2.8.5", features= [] }
    tauri-plugin-dialog="2.4.0"
    tauri-plugin-fs    ="2.4.2"
    tauri-plugin-log   ="2.7.0"
    tauri-plugin-opener="2.5.0"
    ts-rs              ="11.0"
    walkdir            ="2.5.0"

[target.'cfg(unix)'.dependencies]
    nix= {version="0.30.1", features= ["signal"] }
